Fixed image grid template rows overflow

--- a/src/components/property/propertyMediaContainer.css
+++ b/src/components/property/propertyMediaContainer.css
@@ -5,28 +5,23 @@
 
 @media screen and (min-width: 768px) {
     #imageSlider {
-        min-height: 50vh;
-        min-height: 50dvh;
+        height: 50vh;
+        height: 50dvh;
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1200px) {
     #imageSlider {
-        min-height: 80vh;
-        min-height: 80dvh;
+        height: 70vh;
+        height: 70dvh;
     }
 }
-
-/* @media screen and (min-width: 1200px) {
-    #imageSlider {
-        min-height: 70vh;
-        min-height: 70dvh;
-    }
-} */
 
 .images-container {
+    height: 100%;
     display: grid;
     grid-template-columns: 100% 100% 100%;
+    grid-template-rows: 100%;
     overflow: hidden;
     overflow-x: auto;
     scroll-snap-type: x proximity;
@@ -37,6 +32,7 @@
 }
 
 .images-container .imgages-grid {
+    height: 100%;
     scroll-snap-align: start;
 }
 
@@ -57,7 +53,7 @@
     .images-container .imgages-grid {
         display: grid;
         grid-template-columns: 4fr 4fr 4fr 4fr;
-        grid-template-rows: 2fr 2fr;
+        grid-template-rows: 50%;
         gap: .25rem;
         border-left: 5px solid var(--bs-light);
         border-right: 5px solid var(--bs-light);
@@ -74,10 +70,10 @@
 }
 
 .images-container img {
-    /* cursor: pointer; */
     width: 100%;
     height: 100%;
     object-fit: cover;
+    max-height: 100%;
 }
 
 .images-container img:active {
